--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre mí</a>
+                        <a class="nav-link" href="#sec-01">Sobre mí</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Conocimientos</a>
+                        <a class="nav-link" href="#sec-02">Conocimientos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Proyectos</a>
+                        <a class="nav-link" href="#sec-03">Proyectos</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Contacto</a>
+                        <a href="#sec-04" class="nav-link">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -52,18 +52,23 @@
     </div>
 
     <!-- About me -->
-    <section class="sec-01">
+    <section id="sec-01">
         <div class="container">
             <h1>Sobre mí</h1>
             <div class="row">
-                <div class="col-6">
-                    <p>Hola, Me llamo Héctor y soy un Estudiante de programación motivado, bien organizado y
-                        autodidacta,
-                        con excelentes dotes de multitarea y criterio preciso. Actualmente me encuentro en el último
-                        semestre de la carrera analista programador en Inacap.</p>
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                    <p class="descrip-me">
+                        Hola! Me llamo <strong>Héctor</strong> y Actualmente me encuentro en el último
+                        semestre de la carrera analista programador en Inacap. 
+                        Soy una persona estudiosa, dedicada y responsable, 
+                        con muchas metas cumplidas y muchas más por cumplir. <br>
+                        Me considero una buena persona, amigable, comprensiva, 
+                        educada, y creo que para todo hay tiempo. 
+                        Mi <strong>Hobbie</strong> son los videojuegos sobre todos los independientes,
+                        también me encanta estudiar, siempre estoy buscando alguna nueva tecnología o reforzando lo aprendido.</p>
                 </div>
-                <div class="col-6">
-
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center mt-5">
+                    <img class="profile-photo img-thumbnail" src="/img/20210503_124712.jpg" alt="">
                 </div>
 
             </div>
@@ -72,7 +77,7 @@
 
     <hr>
     <!-- Conocimientos -->
-    <section class="sec-02">
+    <section id="sec-02">
         <div class="container">
             <h1>Conocimientos</h1>
             <div class="row knowledge">
@@ -101,23 +106,32 @@
 
     <hr>
     <!-- Trabajos -->
-    <section class="sec-03">
+    <section id="sec-03">
         <div class="container">
             <h1>Trabajos</h1>
-            <p>Tengo pocos proyectos creados, hasta ahora algunas cosas para practicar con <b>JavaScript</b>
-                pero pronto ire subiendo más cosas. <br>  Revisa mi Portafolio en el Siguiente <a href="http://portafolio.hectorvaldesm.com/"><input type="button"
-                        class="btn btn-warning" value="Link" /></a></p>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                    <p class="mt-3">Tengo pocos proyectos creados, hasta ahora algunas cosas para practicar con <b>JavaScript</b>
+                        pero pronto ire subiendo más cosas. <br> Revisa mi Portafolio en el Siguiente <a
+                            href="http://portafolio.hectorvaldesm.com/"><input type="button" class="btn btn-warning"
+                                value="Link" /></a></p>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
+                    <img class="img-transfer" src="img/undraw_Transfer_files_re_a2a9.png" alt="">
+                </div>
+            </div>
+
         </div>
     </section>
 
     <hr>
     <!-- contacto -->
-    <section class="sec-04">
+    <section id="sec-04">
         <div class="container">
             <h1>Contactame</h1>
             <p>Si quieres saber más sobre mí o sobre mi trabajo enviame un mensaje.</p>
 
-            <form method="post" action="">
+            <form method="post" action="/php/contacto.php">
                 <div class="row test">
                     <div class="col-xs-12 col-sm-6">
                         <input class="form-control" type="text" name="name" id="name" placeholder="Nombre" required />
@@ -163,7 +177,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-<script src="js/app.js"></script>
+<!-- <script src="js/app.js"></script> -->
 <script src="js/PomodoroTimer.js"></script>
 <script src="https://kit.fontawesome.com/be94f8a50b.js" crossorigin="anonymous"></script>
 </body>
