--- a/gracias.html
+++ b/gracias.html
@@ -1,42 +1,65 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Héctor Valdés M.</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />		
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-		<link rel="stylesheet" href="assets/css/cssPageTwo.css" />
-		
-	</head>
-		
-	<body>
-		<div class="modal fade" tabindex="-1" id="myModal" aria-labelledby="myModallLabel" aria-hidden="true" role="dialog">
-			<div class="modal-dialog">
-			  <div class="modal-content">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+	<link rel="stylesheet" href="css/estilos.css">
+	<!-- Fonts -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+
+	<link rel="icon" type="image/png" href="img/logo cuadrado.png">
+	<title> Correo enviado </title>
+</head>
+
+<body>
+	<p style="height: 70vh;"></p>
+	<div class="modal fade" tabindex="-1" id="myModal" aria-labelledby="myModallLabel" aria-hidden="true" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
 				<div class="modal-header">
-				  <h5 class="modal-title">Mensaje</h5>				  
+					<h5 class="modal-title">Mensaje</h5>
 				</div>
 				<div class="modal-body">
-				  <p>El mensaje fue enviado exitosamente !</p>
+					<p>El mensaje fue enviado exitosamente !</p>
 				</div>
 				<div class="modal-footer">
-				  <button type="button" class="btn btn-warning" data-bs-dismiss="modal" role="link" onclick="window.location='index.html'">Volver</button>
+					<button type="button" class="btn btn-warning" data-bs-dismiss="modal" role="link"
+						onclick="window.location='index.html'">Volver</button>
 				</div>
-			  </div>
 			</div>
-		  </div>
+		</div>
+	</div>
+	<!-- FOOTER -->
+	<div class="footer-basic bg-dark mt-5">
+		<footer>
+			<div class="social">
+				<a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.linkedin.com/in/h%C3%A9ctor-vald%C3%A9s-m"><i class="fab fa-linkedin-in"></i></a>
+				<a href="https://www.twitter.com/Mushroom0047"><i class="fab fa-twitter"></i></a>
+				<a href="https://www.github.com/Mushroom0047"><i class="fab fa-github"></i></a>
+			</div>
+			<p class="copyright">HectorValdesM. All rights reserved.</p>
+		</footer>
+	</div>
+
+	<script>
+		window.onload = () => {
+			$('#myModal').modal('show');
+		};
+	</script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+		crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/be94f8a50b.js" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
-		  <script>
-			function funcion(){ 
-				$('#myModal').modal('show'); 
-			}
-    		window.onload = funcion;
-		</script>
+</body>
 
-		  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-		  <script src="assets/js/jquery.min.js"></script>
-		  <script src="assets/js/jquery.scrollex.min.js"></script>
-		  <script src="assets/js/jquery.scrolly.min.js"></script>
-	</body>
 </html>
