--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <!-- AOS cs -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link rel="icon" type="image/png" href="img/logo cuadrado.png">
     <title> Live Portfolio </title>
@@ -53,7 +55,7 @@
 
     <!-- About me -->
     <section id="sec-01">
-        <div class="container">
+        <div class="container" data-aos="fade-right">
             <h1>Sobre mí</h1>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
@@ -78,7 +80,7 @@
     <hr>
     <!-- Conocimientos -->
     <section id="sec-02">
-        <div class="container">
+        <div class="container" data-aos="fade-left">
             <h1>Conocimientos</h1>
             <div class="row knowledge">
                 <div class="col-12">
@@ -107,7 +109,7 @@
     <hr>
     <!-- Trabajos -->
     <section id="sec-03">
-        <div class="container">
+        <div class="container" data-aos="fade-right">
             <h1>Trabajos</h1>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
@@ -127,11 +129,11 @@
     <hr>
     <!-- contacto -->
     <section id="sec-04">
-        <div class="container">
+        <div class="container" data-aos="flip-left">
             <h1>Contactame</h1>
             <p>Si quieres saber más sobre mí o sobre mi trabajo enviame un mensaje.</p>
 
-            <form method="post" action="/php/contacto.php">
+            <form method="post" action="/contacto.php">
                 <div class="row test">
                     <div class="col-xs-12 col-sm-6">
                         <input class="form-control" type="text" name="name" id="name" placeholder="Nombre" required />
@@ -180,6 +182,10 @@
 <script src="js/app.js"></script>
 <script src="js/PomodoroTimer.js"></script>
 <script src="https://kit.fontawesome.com/be94f8a50b.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
