animation added part two

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 value="Link" /></a></p>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
-                    <img class="img-transfer" src="img/undraw_Transfer_files_re_a2a9.png" alt="">
+                    <img class="img-transfer" src="img/undraw_Transfer_files_re_a2a9.png" alt="my-profile-photo">
                 </div>
             </div>
 
