Added personal resume available to download

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                         educada, y creo que para todo hay tiempo. 
                         Mi <strong>Hobbie</strong> son los videojuegos sobre todos los independientes,
                         también me encanta estudiar, siempre estoy buscando alguna nueva tecnología o reforzando lo aprendido.</p>
+                        <br>
+                        <p>Puedes descargar mí curriculum acá</p>
+                        <a href="cv/HectorValdes-AnalistaProgramador.pdf" target="_blank" rel="noopener noreferrer"><input type="button" class="btn btn-warning"value="Descargar"/></a>                                       
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center mt-5">
                     <img class="profile-photo img-thumbnail" src="/img/20210503_124712.jpg" alt="">
