Fixed gracias page

--- a/gracias.html
+++ b/gracias.html
@@ -16,13 +16,12 @@
 	<title> Correo enviado </title>
 </head>
 
-<body>
-	<p style="height: 70vh;"></p>
-	<div class="modal fade" tabindex="-1" id="myModal" aria-labelledby="myModallLabel" aria-hidden="true" role="dialog">
+<body class="bodyGracias">
+	<div class="modal fade" tabindex="-1" id="myModal" data-bs-keyboard="false" data-bs-backdrop="static" aria-labelledby="myModallLabel" aria-hidden="true" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title">Mensaje</h5>
+					<h5 class="modal-title">Felicidades !</h5>
 				</div>
 				<div class="modal-body">
 					<p>El mensaje fue enviado exitosamente !</p>
@@ -34,8 +33,11 @@
 			</div>
 		</div>
 	</div>
+	<div class="container">
+		<img class="img-fluid image-bg" src="/img/undraw_online_ad_re_ol62.png" alt="email-send">
+	</div>
 	<!-- FOOTER -->
-	<div class="footer-basic bg-dark mt-5">
+	<div class="footer-basic footer-gracias bg-dark mt-5">
 		<footer>
 			<div class="social">
 				<a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
@@ -58,8 +60,5 @@
 		crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/be94f8a50b.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-
 </body>
-
 </html>
