--- a/index.html
+++ b/index.html
@@ -4,31 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="preogramador web y movil">
+    <meta name="description" content="programador junior backend con conocimientos en desarrollo web y móvil ">
+    <meta name="author" content="Hector Valdes M">
+    <meta name="robots" content="index, nofollow">
+    <meta http-equiv="content-type" content="text/html;UTF-8">
+    <meta http-equiv="content-language" content="es">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Open+Sans:ital,wght@1,300&display=swap"
+        rel="stylesheet">
     <!-- AOS cs -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link rel="icon" type="image/png" href="img/logo cuadrado.png">
-    <title> Live Portfolio </title>
+    <title> Portafolio </title>
 </head>
 
 <body>
     <!-- Nav bar -->
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-warning">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Héctor Valdés M.</a>
+            <a class="navbar-brand" href="#sec-00">
+                <h4>HV</h4>
+            </a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 link-navbar">
                     <li class="nav-item">
                         <a class="nav-link" href="#sec-01">Sobre mí</a>
                     </li>
@@ -45,44 +55,64 @@
             </div>
         </div>
     </nav>
-
-    <!-- Titulo HOME-->
-    <div class="text-center bgsvgUp">
-        <h1 class="animate__animated animate__flip text-white">~Héctor Valdés M.~</h1>
-        <h3 class="text-white">Hola mundo</h3>
-        <img class="animate__animated" id="img-avatar" src="img/avatar.png" alt="">
-    </div>
-
+    <!-- HERO -->
+    <section id="sec-00">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-10 hero-name">
+                    <div class="social">
+                        <a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/h%C3%A9ctor-vald%C3%A9s-m"><i
+                                class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.twitter.com/Mushroom0047"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.github.com/Mushroom0047"><i class="fab fa-github"></i></a>
+                    </div>
+                    <h1 class="typewriter"></h1>
+                    <h3>Analista Programador </h3>
+                    <div class="buttons">
+                        <a href="#sec-03"><input class="btn btn-portafolio mt-5" type="button"
+                                value="Mi portafolio"></a>
+                        <a href="#sec-01"><input class="btn btn-warning mt-5" type="button" value="Sobre mí"></a>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-2">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr id="sec-01">
     <!-- About me -->
-    <section id="sec-01">
+    <section>
         <div class="container" data-aos="fade-right">
             <h1>Sobre mí</h1>
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
                     <p class="descrip-me">
                         Hola! Me llamo <strong>Héctor</strong> y Actualmente me encuentro en el último
-                        semestre de la carrera analista programador en Inacap. 
-                        Soy una persona estudiosa, dedicada y responsable, 
+                        semestre de la carrera analista programador en Inacap.
+                        Soy una persona estudiosa, dedicada y responsable,
                         con muchas metas cumplidas y muchas más por cumplir. <br>
-                        Me considero una buena persona, amigable, comprensiva, 
-                        educada, y creo que para todo hay tiempo. 
+                        Me considero una buena persona, amigable, comprensiva,
+                        educada, y creo que para todo hay tiempo.
                         Mi <strong>Hobbie</strong> son los videojuegos sobre todos los independientes,
-                        también me encanta estudiar, siempre estoy buscando alguna nueva tecnología o reforzando lo aprendido.</p>
-                        <br>
-                        <p>Puedes descargar mí curriculum acá</p>
-                        <a href="cv/HectorValdes-AnalistaProgramador.pdf" target="_blank" rel="noopener noreferrer"><input type="button" class="btn btn-warning"value="Descargar"/></a>                                       
+                        también me encanta estudiar y tocar guitarra eléctrica, siempre estoy buscando alguna nueva
+                        tecnología o reforzando lo aprendido.</p>
+                    <br>
+                    <p>Puedes descargar mí curriculum acá</p>
+                    <a href="cv/HectorValdes-AnalistaProgramador.pdf" target="_blank" rel="noopener noreferrer"><input
+                            type="button" class="btn btn-warning" value="Descargar" /></a>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center mt-5">
-                    <img class="profile-photo img-thumbnail" src="/img/20210503_124712.jpg" alt="">
                 </div>
 
             </div>
         </div>
     </section>
 
-    <hr>
+    <hr id="sec-02">
     <!-- Conocimientos -->
-    <section id="sec-02">
+    <section>
         <div class="container" data-aos="fade-left">
             <h1>Conocimientos</h1>
             <div class="row knowledge">
@@ -109,35 +139,35 @@
         </div>
     </section>
 
-    <hr>
+    <hr id="sec-03">
     <!-- Trabajos -->
-    <section id="sec-03">
+    <section>
         <div class="container" data-aos="fade-right">
-            <h1>Trabajos</h1>
+            <h1 class="text-center">Trabajos</h1>
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <p class="mt-3">Tengo pocos proyectos creados, hasta ahora algunas cosas para practicar con <b>JavaScript</b>
+                <div class="col-12">
+                    <p class="mt-3">Tengo pocos proyectos creados, hasta ahora algunas cosas para practicar con
+                        <strong>JavaScript</strong>
                         pero pronto ire subiendo más cosas. <br> Revisa mi Portafolio en el Siguiente <a
                             href="http://portafolio.hectorvaldesm.com/"><input type="button" class="btn btn-warning"
                                 value="Link" /></a></p>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
-                    <img class="img-transfer" src="img/undraw_Transfer_files_re_a2a9.png" alt="my-profile-photo">
+                <div class="col-12">
+                    <img class="img-fluid img-trabajos" src="img/trabajos.png" alt="imagen de trabajo">
                 </div>
             </div>
-
         </div>
     </section>
 
-    <hr>
+    <hr id="sec-04">
     <!-- contacto -->
-    <section id="sec-04">
+    <section>
         <div class="container" data-aos="flip-left">
             <h1>Contactame</h1>
             <p>Si quieres saber más sobre mí o sobre mi trabajo enviame un mensaje.</p>
 
             <form method="post" action="/contacto.php">
-                <div class="row test">
+                <div class="row form-contact">
                     <div class="col-xs-12 col-sm-6">
                         <input class="form-control" type="text" name="name" id="name" placeholder="Nombre" required />
                     </div>
@@ -158,16 +188,15 @@
                     </div>
                 </div>
             </form>
-
         </div>
     </section>
 
 
 
     <!-- FOOTER -->
-    <div class="footer-basic bg-dark mt-5">
+    <div class="footer-basic mt-5">
         <footer>
-            <div class="social">
+            <div class="social-footer">
                 <a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/h%C3%A9ctor-vald%C3%A9s-m"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.twitter.com/Mushroom0047"><i class="fab fa-twitter"></i></a>
@@ -183,12 +212,11 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
 <script src="js/app.js"></script>
-<script src="js/PomodoroTimer.js"></script>
 <script src="https://kit.fontawesome.com/be94f8a50b.js" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
-  </script>
+</script>
 </body>
 
 </html>
