--- a/gracias.html
+++ b/gracias.html
@@ -7,7 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 	<title> Correo enviado </title>
 </head>
 
-<body class="bodyGracias">
+<body>
 	<div class="modal fade" tabindex="-1" id="myModal" data-bs-keyboard="false" data-bs-backdrop="static" aria-labelledby="myModallLabel" aria-hidden="true" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -33,21 +33,19 @@
 			</div>
 		</div>
 	</div>
-	<div class="container">
-		<img class="img-fluid image-bg" src="/img/undraw_online_ad_re_ol62.png" alt="email-send">
-	</div>
+
 	<!-- FOOTER -->
-	<div class="footer-basic footer-gracias bg-dark mt-5">
-		<footer>
-			<div class="social">
-				<a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
-				<a href="https://www.linkedin.com/in/h%C3%A9ctor-vald%C3%A9s-m"><i class="fab fa-linkedin-in"></i></a>
-				<a href="https://www.twitter.com/Mushroom0047"><i class="fab fa-twitter"></i></a>
-				<a href="https://www.github.com/Mushroom0047"><i class="fab fa-github"></i></a>
-			</div>
-			<p class="copyright">HectorValdesM. All rights reserved.</p>
-		</footer>
-	</div>
+    <div class="footer-basic mt-5">
+        <footer>
+            <div class="social-footer">
+                <a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/h%C3%A9ctor-vald%C3%A9s-m"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.twitter.com/Mushroom0047"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.github.com/Mushroom0047"><i class="fab fa-github"></i></a>
+            </div>
+            <p class="copyright">HectorValdesM. All rights reserved.</p>
+        </footer>
+    </div>
 
 	<script>
 		window.onload = () => {
