--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
         </div>
     </nav>
     <!-- HERO -->
+    <canvas id=canvas></canvas>
     <section id="sec-00">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-10 hero-name">
+                <div class="col-sm-12 col-md-6 hero-name">
                     <div class="social">
                         <a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/h%C3%A9ctor-vald%C3%A9s-m"><i
@@ -71,23 +72,23 @@
                     <h3>Analista Programador </h3>
                     <div class="buttons">
                         <a href="#sec-03"><input class="btn btn-portafolio mt-5" type="button"
-                                value="Mi portafolio"></a>
+                                value="Portafolio"></a>
                         <a href="#sec-01"><input class="btn btn-warning mt-5" type="button" value="Sobre mí"></a>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-2">
-                    <img src="" alt="">
+                <div class="col-sm-12 col-md-12 col-lg-6">
+                    <img class="img-fluid image-profile" src="img/avatar.jpg" alt="profile foto">
                 </div>
             </div>
         </div>
-    </section>
-    <hr id="sec-01">
+    </section> 
+    <!-- <hr id="sec-01"> -->
     <!-- About me -->
-    <section>
-        <div class="container" data-aos="fade-right">
+    <section class="caja-sobre-mi">
+        <div class="container text-center" data-aos="fade-right">
             <h1>Sobre mí</h1>
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                <div class="col-12">
                     <p class="descrip-me">
                         Hola! Me llamo <strong>Héctor</strong> y Actualmente me encuentro en el último
                         semestre de la carrera analista programador en Inacap.
@@ -98,14 +99,15 @@
                         Mi <strong>Hobbie</strong> son los videojuegos sobre todos los independientes,
                         también me encanta estudiar y tocar guitarra eléctrica, siempre estoy buscando alguna nueva
                         tecnología o reforzando lo aprendido.</p>
-                    <br>
+                        <img class="img-fluid image-me" src="img/Imagen1.png" alt="">
+                    <br><br><br>
                     <p>Puedes descargar mí curriculum acá</p>
-                    <a href="cv/HectorValdes-AnalistaProgramador.pdf" target="_blank" rel="noopener noreferrer"><input
+                    <div data-aos="fade-up">
+                         <a href="cv/HectorValdes-AnalistaProgramador.pdf" target="_blank" rel="noopener noreferrer"><input
                             type="button" class="btn btn-warning" value="Descargar" /></a>
+                    </div>
+                   
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center mt-5">
-                </div>
-
             </div>
         </div>
     </section>
@@ -142,8 +144,8 @@
     <hr id="sec-03">
     <!-- Trabajos -->
     <section>
-        <div class="container" data-aos="fade-right">
-            <h1 class="text-center">Trabajos</h1>
+        <div class="container text-center" data-aos="fade-right">
+            <h1>Trabajos</h1>
             <div class="row">
                 <div class="col-12">
                     <p class="mt-3">Tengo pocos proyectos creados, hasta ahora algunas cosas para practicar con
@@ -217,6 +219,7 @@
 <script>
     AOS.init();
 </script>
+<script src="js/matrix.js"></script>
 </body>
 
 </html>
