Deleted bootstrap and make navbar with only css

--- a/gracias.html
+++ b/gracias.html
@@ -24,7 +24,7 @@
 					<h5 class="modal-title">Felicidades !</h5>
 				</div>
 				<div class="modal-body">
-					<p>El mensaje fue enviado exitosamente !</p>
+					<p class="text-dark">El mensaje fue enviado exitosamente !</p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-warning" data-bs-dismiss="modal" role="link"
