--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
     <meta name="robots" content="index, nofollow">
     <meta http-equiv="content-type" content="text/html;UTF-8">
     <meta http-equiv="content-language" content="es">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/styles.css">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,36 +23,31 @@
 </head>
 
 <body>
-    <!-- Nav bar -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-warning">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
-                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#sec-00">
-                <h4>HV</h4>
-            </a>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 link-navbar">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#sec-01">Sobre mí</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#sec-02">Conocimientos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#sec-03">Proyectos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#sec-04" class="nav-link">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- HERO -->
     <canvas id=canvas></canvas>
+    <!-- Nav bar -->
+    <header class="header">
+        <nav class="navbar">    
+            <li class="nav-item-hamburger">
+                <a class="nav-hamburger"><i class="fas fa-bars"></i></a>
+            </li>        
+            <ul class="nav-menu" id="nav-menu">
+                <li class="nav-item">
+                    <a class="nav-link" href="#sec-01">Sobre mí</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#sec-02">Conocimientos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#sec-03">Proyectos</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#sec-04" class="nav-link">Contacto</a>
+                </li>        
+            </ul>            
+        </nav>
+</header>
+    <!-- HERO -->
+
     <section id="sec-00">
         <div class="container">
             <div class="row">
@@ -71,8 +62,7 @@
                     <h1 class="typewriter"></h1>
                     <h3>Analista Programador </h3>
                     <div class="buttons">
-                        <a href="#sec-03"><input class="btn btn-portafolio mt-5" type="button"
-                                value="Portafolio"></a>
+                        <a href="#sec-03"><input class="btn btn-portafolio mt-5" type="button" value="Portafolio"></a>
                         <a href="#sec-01"><input class="btn btn-warning mt-5" type="button" value="Sobre mí"></a>
                     </div>
                 </div>
@@ -81,7 +71,7 @@
                 </div>
             </div>
         </div>
-    </section> 
+    </section>
     <!-- <hr id="sec-01"> -->
     <!-- About me -->
     <section class="caja-sobre-mi">
@@ -99,14 +89,15 @@
                         Mi <strong>Hobbie</strong> son los videojuegos sobre todos los independientes,
                         también me encanta estudiar y tocar guitarra eléctrica, siempre estoy buscando alguna nueva
                         tecnología o reforzando lo aprendido.</p>
-                        <img class="img-fluid image-me" src="img/Imagen1.png" alt="">
+                    <img class="img-fluid image-me" src="img/Imagen1.png" alt="">
                     <br><br><br>
                     <p>Puedes descargar mí curriculum acá</p>
                     <div data-aos="fade-up">
-                         <a href="cv/HectorValdes-AnalistaProgramador.pdf" target="_blank" rel="noopener noreferrer"><input
-                            type="button" class="btn btn-warning" value="Descargar" /></a>
+                        <a href="cv/HectorValdes-AnalistaProgramador.pdf" target="_blank"
+                            rel="noopener noreferrer"><input type="button" class="btn btn-warning"
+                                value="Descargar" /></a>
                     </div>
-                   
+
                 </div>
             </div>
         </div>
@@ -152,7 +143,8 @@
                         <strong>JavaScript</strong>
                         pero pronto ire subiendo más cosas. <br> Revisa mi Portafolio en el Siguiente <a
                             href="http://portafolio.hectorvaldesm.com/"><input type="button" class="btn btn-warning"
-                                value="Link" /></a></p>
+                                value="Link" /></a>
+                    </p>
                 </div>
                 <div class="col-12">
                     <img class="img-fluid img-trabajos" src="img/trabajos.png" alt="imagen de trabajo">
@@ -209,10 +201,6 @@
     </div>
 
 </body>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-    crossorigin="anonymous"></script>
 <script src="js/app.js"></script>
 <script src="https://kit.fontawesome.com/be94f8a50b.js" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
