hero secction it's ready !

--- a/index.html
+++ b/index.html
@@ -47,32 +47,30 @@
         </nav>
 </header>
     <!-- HERO -->
-
     <section id="sec-00">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 hero-name">
-                    <div class="social">
-                        <a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/h%C3%A9ctor-vald%C3%A9s-m"><i
-                                class="fab fa-linkedin-in"></i></a>
-                        <a href="https://www.twitter.com/Mushroom0047"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.github.com/Mushroom0047"><i class="fab fa-github"></i></a>
-                    </div>
-                    <h1 class="typewriter"></h1>
-                    <h3>Analista Programador </h3>
-                    <div class="buttons">
-                        <a href="#sec-03"><input class="btn btn-portafolio mt-5" type="button" value="Portafolio"></a>
-                        <a href="#sec-01"><input class="btn btn-warning mt-5" type="button" value="Sobre mí"></a>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-12 col-lg-6">
-                    <img class="img-fluid image-profile" src="img/avatar.jpg" alt="profile foto">
-                </div>
+        <div class="container-hero">
+            <div class="social-hero">
+                <a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/h%C3%A9ctor-vald%C3%A9s-m"><i
+                        class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.twitter.com/Mushroom0047"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.github.com/Mushroom0047"><i class="fab fa-github"></i></a>
             </div>
+            <div class="titulo-hero">
+               <h1 class="typewriter"></h1>
+                <h3>Analista Programador </h3> 
+            </div>
+            
+            <div class="button-hero">
+                <a href="#sec-03"><input class="btn-portafolio" type="button" value="Portafolio"></a>
+                <a href="#sec-01"><input class="btn" type="button" value="Sobre mí"></a>
+            </div>
+            <div class="image-hero">
+                <img class="image-profile" src="img/avatar.jpg" alt="profile foto">
+            </div>           
         </div>
     </section>
-    <!-- <hr id="sec-01"> -->
+    <hr id="sec-01">
     <!-- About me -->
     <section class="caja-sobre-mi">
         <div class="container text-center" data-aos="fade-right">
