Edited the knowledge secction !

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 tecnología o reforzando lo aprendido.</p>
             <img class="image-me" src="img/Imagen1.png" alt="foto de mi mismisimo">
             <p>Puedes descargar mí curriculum acá</p>
-            <div class="btn-download" data-aos="fade-up">
+            <div class="btn-download">
                 <a href="cv/HectorValdes-AnalistaProgramador.pdf" target="_blank" rel="noopener noreferrer"><input
                         type="button" class="btn btn-warning" value="Descargar" /></a>
             </div>
@@ -94,54 +94,48 @@
     <div id="sec-02">
         <div class="container-knowledge">
             <h1 class="h1-conocimientos">Conocimientos</h1>
-            <!-- <p>Constantemente estoy aprendiendo de manera autodidacta, pero hasta ahora estas son las
-                tecnologías
-                que conozco.</p> -->
+            <p class="description-knowledge">Estoy a punto de terminar mi carrera técnica como <strong>Analista
+                    Programador</strong> en Inacap, sin embargo, constantemente
+                estoy estudiando de manera autodidacta en la plataforma <strong>Udemy</strong>. Actualmente me encuentro
+                realizando un curso de <strong>React</strong>
+                y he realizado cursos de diseño de videojuegos con el programa <strong>Game Maker Studio 2</strong>,
+                con el cual desarrollé 3 videojuegos sencillos, también he tomado curso de desarrollo
+                <strong>Frontend</strong> puliendo mis conocimientos en
+                <strong>HTML, CSS y JavaScript</strong>.
+            </p>
             <div class="knowledge">
-                <div class="item-1">
+                <div class="tittle-programming">
+                    <h2>Lenguajes de Programación</h2>
+                </div>
+                <div class="programming-languages">
                     <p class="knowledge-item"><i class="fab fa-java"></i>Java</p>
-                </div>
-                <div class="progress-bar-12" id="progress-bar"></div>
-                <div class=item-2>
-                    <p class="knowledge-item"><i class="fab fa-html5"></i>HTML</p>
-                </div>
-                <div class="progress-bar-13" id="progress-bar"></div>
-                <div class=item-3>
-                    <p class="knowledge-item"><i class="fab fa-css3-alt"></i>CSS/SASS</p>
-                </div>
-                <div class="progress-bar-14" id="progress-bar"></div>
-                <div class=item-4>
                     <p class="knowledge-item"><i class="fab fa-android"></i>Android Studio</p>
-                </div>
-                <div class="progress-bar-15" id="progress-bar"></div>
-                <div class=item-5>
-                    <p class="knowledge-item"><i class="fas fa-gamepad"></i>Game Maker Studio 2</p>
-                </div>
-                <div class="progress-bar-16" id="progress-bar"></div>
-                <div class=item-6>
-                    <p class="knowledge-item"><i class="fas fa-database"></i>Base de Datos SQL</p>
-                </div>
-                <div class="progress-bar-17" id="progress-bar"></div>
-                <div class=item-7>
-                    <p class="knowledge-item"><i class="fab fa-js"></i>JavaScript</p>
-                </div>
-                <div class="progress-bar-18" id="progress-bar"></div>
-                <div class=item-8>
                     <p class="knowledge-item"><i class="fas fa-code"></i>C#</p>
                 </div>
-                <div class="progress-bar-19" id="progress-bar"></div>
-                <div class=item-9>
-                    <p class="knowledge-item"><i class="fab fa-git"></i>Control de versiones git</p>
+                <div class="tittle-web">
+                    <h2>Diseño Web</h2>
                 </div>
-                <div class="progress-bar-20" id="progress-bar"></div>
-                <div class=item-10>
-                    <p class="knowledge-item"><i class="fab fa-unity"></i>Unity2d</p>
-                </div>
-                <div class="progress-bar-21" id="progress-bar"></div>
-                <div class=item-11>
+                <div class="web-design">
+                    <p class="knowledge-item"><i class="fab fa-html5"></i>HTML</p>
+                    <p class="knowledge-item"><i class="fab fa-css3-alt"></i>CSS</p>
+                    <p class="knowledge-item"><i class="fab fa-sass"></i>SASS</p>
+                    <p class="knowledge-item"><i class="fab fa-js"></i>JavaScript</p>
                     <p class="knowledge-item"><i class="fab fa-wordpress-simple"></i>Wordpress</p>
                 </div>
-                <div class="progress-bar-22" id="progress-bar"></div>
+                <div class="tittle-videogames">
+                    <h2>Programación de videojuegos</h2>
+                </div>
+                <div class="videogames-dev">
+                    <p class="knowledge-item"><i class="fas fa-gamepad"></i>Game Maker Studio 2</p>
+                    <p class="knowledge-item"><i class="fab fa-unity"></i>Unity2d</p>
+                </div>
+                <div class="tittle-other">
+                    <h2>Otros</h2>
+                </div>
+                <div class="other">
+                    <p class="knowledge-item"><i class="fas fa-database"></i>Base de Datos SQL</p>
+                    <p class="knowledge-item"><i class="fab fa-git"></i>Control de versiones</p>
+                </div>
             </div>
         </div>
     </div>
@@ -149,12 +143,12 @@
     <!-- Trabajos -->
     <div id="sec-03">
         <div class="container-trabajos">
-            <h1 class="h1-trabajos">Trabajos</h1>
+            <h1 class="h1-trabajos">Proyectos</h1>
             <p>Tengo pocos proyectos creados, hasta ahora algunas pruebas para practicar con
-                <strong>JavaScript</strong>, APP para <strong>Android</strong> y algunas modificaciones en páginas de <strong>Wordpress</strong>
-                pero pronto ire subiendo más cosas. <br> Revisa mi Portafolio en el Siguiente <br><a
-                    href="http://portafolio.hectorvaldesm.com/"><input type="button" class="btn"
-                        value="Link" /></a>
+                <strong>JavaScript</strong>, APP para <strong>Android</strong> y algunas modificaciones en páginas de
+                <strong>Wordpress</strong>
+                pero pronto ire subiendo más cosas. <br> Revisa mi Portafolio en el Siguiente <br><br>
+                <a href="http://portafolio.hectorvaldesm.com/"><input type="button" class="btn" value="Link" /></a>
             </p>
             <img class="img-trabajos" src="img/trabajos.png" alt="imagen de trabajo">
         </div>
@@ -162,31 +156,30 @@
 
     <!-- contacto -->
     <div id="sec-04">
-        <div class="container-formulario">
+        <div class="tittle-contact">
             <h1 class="h1-contactame">Contactame</h1>
-            <p>Si quieres saber más sobre mí o sobre mi trabajo enviame un mensaje.</p>
-
-            <form method="post" action="/contacto.php">               
-                <div class="form-control">
-                    <input class="form-input form-name" type="text" name="name" id="name" placeholder="Nombre..." required />
-                </div>
-                <div class="form-control">
-                    <input class="form-input form-email" type="email" name="email" id="email" placeholder="Email..." required />
-                </div>
-                <div class="form-control">
-                    <input class="form-input" type="text" name="subject" id="subject" placeholder="Asunto..."
+        </div>
+        <form method="post" action="/contacto.php">
+            <div class="container-formulario">
+                <div class="div-1">
+                    <input class="form-input form-name" type="text" name="name" id="name" placeholder="Nombre..."
                         required />
+                    <input class="form-input form-email" type="email" name="email" id="email"
+                        placeholder="Email..." required /> 
+                    <input class="form-input" type="text" name="subject"
+                        id="subject" placeholder="Asunto..." required />
+                    <textarea class="form-input" name="message"
+                        id="message" placeholder="Mensaje..." rows="6" required></textarea>
                 </div>
-                <div class="form-control">
-                    <textarea class="form-input" name="message" id="message" placeholder="Mensaje..." rows="6"
-                        required></textarea>
+                <div class="div-2">
+                    <p>Si quieres saber más sobre mí o sobre mi trabajo enviame un mensaje.</p>
                 </div>
-                <div class="button-form">
+                <div class="div-3">
                     <input type="submit" class="btn" value="Enviar" name="enviar" />
                     <input type="reset" value="Limpiar" class="btn-limpiar" />
-                </div>                
-            </form>
-        </div>
+                </div>
+            </div>
+        </form>
     </div>
 
 
