Fixed the responsive, added gears spining

--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
                 pero pronto ire subiendo más cosas. <br> Revisa mi Portafolio en el Siguiente <br><br>
                 <a href="http://portafolio.hectorvaldesm.com/"><input type="button" class="btn" value="Link" /></a>
             </p>
-            <img class="img-trabajos" src="img/trabajos.png" alt="imagen de trabajo">
+            <!-- <img class="img-trabajos" src="img/trabajos.png" alt="imagen de trabajo"> -->
+            <span><i id='spin1'class="fas fa-cog"></i><i id='spin2' class="fas fa-cog"></i></span>
+
         </div>
     </div>
 
