Fix the knowlegde design and the contact

--- a/index.html
+++ b/index.html
@@ -103,38 +103,31 @@
                 <strong>Frontend</strong> puliendo mis conocimientos en
                 <strong>HTML, CSS y JavaScript</strong>.
             </p>
+            <!-- Cuadro de conocimientos -->
             <div class="knowledge">
-                <div class="tittle-programming">
-                    <h2>Lenguajes de Programación</h2>
-                </div>
-                <div class="programming-languages">
-                    <p class="knowledge-item"><i class="fab fa-java"></i>Java</p>
-                    <p class="knowledge-item"><i class="fab fa-android"></i>Android Studio</p>
-                    <p class="knowledge-item"><i class="fas fa-code"></i>C#</p>
-                </div>
-                <div class="tittle-web">
-                    <h2>Diseño Web</h2>
-                </div>
-                <div class="web-design">
+                <div class="web">
+                    <p class="text-center">Diseño Web</p>
                     <p class="knowledge-item"><i class="fab fa-html5"></i>HTML</p>
                     <p class="knowledge-item"><i class="fab fa-css3-alt"></i>CSS</p>
                     <p class="knowledge-item"><i class="fab fa-sass"></i>SASS</p>
                     <p class="knowledge-item"><i class="fab fa-js"></i>JavaScript</p>
                     <p class="knowledge-item"><i class="fab fa-wordpress-simple"></i>Wordpress</p>
                 </div>
-                <div class="tittle-videogames">
-                    <h2>Programación de videojuegos</h2>
+                <div class="progra">
+                    <p class="text-center">Lenguajes de Programación</p>
+                    <p class="knowledge-item"><i class="fab fa-java"></i>Java</p>                    
+                    <p class="knowledge-item"><i class="fas fa-code"></i>C#</p>
                 </div>
-                <div class="videogames-dev">
-                    <p class="knowledge-item"><i class="fas fa-gamepad"></i>Game Maker Studio 2</p>
-                    <p class="knowledge-item"><i class="fab fa-unity"></i>Unity2d</p>
-                </div>
-                <div class="tittle-other">
-                    <h2>Otros</h2>
-                </div>
-                <div class="other">
+                <div class="tec">
+                    <p class="text-center">Otros</p>
                     <p class="knowledge-item"><i class="fas fa-database"></i>Base de Datos SQL</p>
                     <p class="knowledge-item"><i class="fab fa-git"></i>Control de versiones</p>
+                    <p class="knowledge-item"><i class="fab fa-android"></i>Android Studio</p>
+                </div>
+                <div class="games">
+                    <p class="text-center">Programación de videojuegos</p>
+                    <p class="knowledge-item"><i class="fas fa-gamepad"></i>Game Maker Studio 2</p>
+                    <p class="knowledge-item"><i class="fab fa-unity"></i>Unity2d</p>
                 </div>
             </div>
         </div>
@@ -161,9 +154,12 @@
         <div class="tittle-contact">
             <h1 class="h1-contactame">Contactame</h1>
         </div>
+        <div class="div-1">
+            <p>Si quieres saber más sobre mí o sobre mi trabajo enviame un mensaje.</p>
+        </div>
         <form method="post" action="/contacto.php">
             <div class="container-formulario">
-                <div class="div-1">
+                <div class="div-2">
                     <input class="form-input form-name" type="text" name="name" id="name" placeholder="Nombre..."
                         required />
                     <input class="form-input form-email" type="email" name="email" id="email"
@@ -172,10 +168,7 @@
                         id="subject" placeholder="Asunto..." required />
                     <textarea class="form-input" name="message"
                         id="message" placeholder="Mensaje..." rows="6" required></textarea>
-                </div>
-                <div class="div-2">
-                    <p>Si quieres saber más sobre mí o sobre mi trabajo enviame un mensaje.</p>
-                </div>
+                </div>                
                 <div class="div-3">
                     <input type="submit" class="btn" value="Enviar" name="enviar" />
                     <input type="reset" value="Limpiar" class="btn-limpiar" />
